# veloren_vox_placer

./: .gitignore  Cargo.toml  README.md
assets/: place.ron
assets/common/: canary.canary
assets/vox/: test.vox
src/: main.rs
