[package]
name = "map_placer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veloren-common = {git = "https://gitlab.com/veloren/dev/veloren" }
veloren-server = {git = "https://gitlab.com/veloren/dev/veloren" }
dot_vox = "5.1.0"
serde = { version = "1.0", features = ["serde_derive"] }
vek = "0.15.9"
rand = "0.8.5"
assets_manager = "*"